--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -22,9 +22,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F3F3F7;
-  background-image: url('./../images/paper.jpg');
-  background-size: 500px;
-  background-repeat: repeat;
+  // background-image: url('./../images/paper.jpg');
+  // background-size: 500px;
+  // background-repeat: repeat;
 }
 
 a {
